--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                                     <li class="nav-item"><a class="nav-link" href="#services">SERVICIOS</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#prices">PRECIOS</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#screenshot">TUTORIAL</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#gruero">CONDUCTOR</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#contactUs">CONTÁCTANOS</a></li>
                                 </ul>
                             </div>
@@ -390,7 +391,7 @@
     </section>
     <!-- Screenshots Ends Here -->
     <!-- Description Start here -->
-    <section id="about-us" class="description-area-2 description-padding pt-115 pb-100">
+    <section id="gruero" class="description-area-2 description-padding pt-115 pb-100">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
@@ -417,6 +418,83 @@
                 </div>
             </div>
         </section>
+        <!-- app-screenshot-area -->
+    <section class="screeenshot-area second-screenshot-area pt-10"
+    style="background-color: rgb(26, 26, 26)">
+    <section class="features-area pb-80">
+        <h1 class="pb-40 pt-40">Tutoriales</h1>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-4 col-lg-4 col-md-6 text-center">
+                    <div class="features-wrap mb-30 wow fadeIn" data-wow-delay="0.2s">
+                        <div class="features-icon">
+                            <img src="img/screenshot/5.png" width="300px" height="500px;"
+                                style="object-fit: contain;">
+                        </div>
+                        <div class="features-content">
+                            <h2 style="color: white;">Regístrate</h2>
+                            <p style="color: white; font-weight: 300;">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 text-center">
+                    <div class="features-wrap mb-30 wow fadeIn" data-wow-delay="0.6s">
+                        <div class="features-icon">
+                            <img src="img/screenshot/4.png" alt="" width="300px" height="500px"
+                                style="object-fit: contain;">
+                        </div>
+                        <div class="features-content">
+                            <h2 style="color: white;">Añade tu vehículo</h2>
+                            <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 text-center">
+                    <div class="features-wrap mb-30 wow fadeIn" data-wow-delay="0.6s">
+                        <div class="features-icon">
+                            <img src="img/screenshot/3.png" alt="" width="300px" height="500px"
+                                style="object-fit: contain;">
+                        </div>
+                        <div class="features-content">
+                            <h2 style="color: white;">Envía tus documentos</h2>
+                            <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 text-center">
+                    <div class="features-wrap mb-30 wow fadeIn" data-wow-delay="0.6s">
+                        <div class="features-icon">
+                            <img src="img/screenshot/2.png" alt="" width="300px" height="500px"
+                                style="object-fit: contain;">
+                        </div>
+                        <div class="features-content">
+                            <h2 style="color: white;">Recibe tu solicitud de servicios</h2>
+                            <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 text-center">
+                    <div class="features-wrap mb-30 wow fadeIn" data-wow-delay="0.6s">
+                        <div class="features-icon">
+                            <img src="img/screenshot/1.png" alt="" width="300px" height="500px"
+                                style="object-fit: contain;">
+                        </div>
+                        <div class="features-content">
+                            <h2 style="color: white;">Acepta tu solicitud de servicios</h2>
+                            <p style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</section>
+<!-- Screenshots Ends Here -->
         <!-- Description Ends Here -->
     <!-- footer -->
     <section id="contactUs">
